# type-system-cpp

./: .gitignore  .gitpod.aliases  .gitpod.dockerfile  .gitpod.yml  CMakeLists.txt  README.md  compile_commands.json  main.cpp  makefile
doc/: 01 - Types in C++.md  What_to_do.md
include/: greeter.hpp  templates.hpp  templates.tpp
src/: greeter.cpp  main.cpp  templates.cpp
src/functionality/: greeter.cpp
test/: Tests.md  greeter_test.cpp  math_test.cpp  templates_test.cpp
test/functionality/: greeter_test.cpp
